--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
     <title>JS Ajax</title>
 </head>
 <body>
+    <div class="container">
+        <button class="btn" id="btn">Get Data</button>
+        <div class="output" id="output"></div>
+    </div>
+
     <script>
-        
+        let btn = document.getElementById('btn');
+        let output = document.getElementById('output');
+        btn.addEventListener('click', getData);
+
+        function getData() {
+            console.log(`get data from ajax`)
+        }
     </script>
 </body>
 </html>
